Added launch parameters to tutorial; fixed broken images in hadoop_related